test/sema/nonexisting-member-access.delta
// RUN: %check_errors %not %delta -typecheck %s

struct Foo {
    int qux;
}

void main() {
    var foo = Foo(1);
    // CHECK: [[@LINE+1]]:19: error: no member named 'bar' in 'Foo'
    var bar = foo.bar;
}
